# ai-fact-checker-mcp

./: LICENSE  README.md  app.py  history.json  main.py  pyproject.toml  requirements.txt
src/: fact_checker.py  wiki_mcp_server.py  x_mcp_server.py
src/twitter/: main.py  server.py  twitter_client.py
src/wiki/: main.py  server.py  wikipedia_client.py
static/: styles.css
templates/: index.html
