[project]
name = "ai-fact-checker-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.12.9",
    "fastapi>=0.115.12",
    "mcp[cli]>=1.9.3",
    "requests>=2.32.3",
    "spacy>=3.8.7",
    "transformers>=4.52.4",
    "uvicorn>=0.34.3",
]
