[project]
name = "ai-fact-checker-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.12.12",
    "fastapi>=0.115.12",
    "loguru>=0.7.3",
    "mcp[cli]==1.9.0",
    "pip>=25.1.1",
    "python-dotenv>=1.1.0",
    "spacy>=3.8.7",
    "streamlit>=1.45.1",
    "torch>=2.7.1",
    "transformers>=4.52.4",
    "watchdog>=6.0.0",
    "wikipedia-api>=0.8.1",
]
